--- a/District Coffee/platforms/browser/www/css/styles.css
+++ b/District Coffee/platforms/browser/www/css/styles.css
@@ -16,6 +16,11 @@
     src: url(fonts/Epilepsja.otf);
 }
 
+#map{
+    width: 100%;
+    height: 80%;
+}
+
 *{font-family: 'Montserrat', sans-serif;
 }
 
@@ -124,4 +129,40 @@
 .toolbar-inner{
 	padding-top: 20px;
 	padding-bottom: 20px;
+}
+
+.event {
+    border-radius:4px;
+    -webkit-border-radius:4px;
+    color:#FFFFFF;
+    font-size:12px;
+    margin:0px 30px;
+    padding:2px 0px;
+}
+
+.event.listening {
+    background-color:#333333;
+    display:block;
+}
+
+.event.received {
+    background-color:#4B946A;
+    display:none;
+}
+
+@keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+ 
+@-webkit-keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+ 
+.blink {
+    animation:fade 3000ms infinite;
+    -webkit-animation:fade 3000ms infinite;
 }
